<resources>
    <string name="app_name">TeamUp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="go">GO!</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="create_an_account">Create An Account</string>
    <string name="or">OR</string>
    <string name="team_up">Team Up</string>
    <string name="logo">logo</string>
    <string name="profile_picture_desc">Profile picture</string>
    <string name="welcome">Welcome to TeamUp</string>
    <string name="sign_in_label">Sign in</string>
    <string name="manage_account_label">Manage account</string>
    <string name="sign_out_label">Sign out</string>
    <string name="myer_briggs_test">Myer-Briggs Test</string>
</resources>
