<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:padding="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="114dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/account_chip_bg"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/account_picture"
            android:layout_width="99dp"
            android:layout_height="104dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/profile_picture_desc"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_person_black_24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/account_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/primary_text_light"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/account_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="@string/welcome"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btnMyers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/myer_briggs_test" />

    <Button
        android:id="@+id/sign_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_bg"
        android:text="@string/sign_out_label"
        android:textColor="@android:color/white" />

</LinearLayout>